--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install xmllint
+      run: sudo apt-get install -y libreadline-dev libjson-c-dev
     - name: make
       run: make
